# mongo-rust-slow-issue-reproduction

./: .gitignore  Cargo.toml  README.md  find.py  find_python.sh  find_rust.sh  populate.sh  pypulate.py
src/: main.rs
