[package]
name = "mongo-rust-slow-issue-reproduction"
version = "0.1.0"
authors = ["Julian Büttner <buetttner-julian@t-online.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.mongodb]
version = "1.1.1"
default-features = false
features = ["sync"]
